@@ -1,3 +1,8 @@
+TheMightyDude (27 January 2011)
+--------------------------------------
+Fixed the "Unable to connect to the database" Bug.
+I thought it was about time this bug was fixed :P
+
 TheMightyDude (13 June 2010)
 --------------------------------------
 Testing SVN Write access, Once again :P
